--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     let currentQR = null;
 
     function generateUPI() {
-      const upi_id = "svnetwork12-2@okicici";
+      const upi_id = "svnetwork12-3@okhdfcbank";
       const name = "shanmugam s";
       const amount = document.getElementById("amount").value.trim();
       const note = document.getElementById("note").value.trim();
