--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
   <script>
     function generateUPI() {
-      const upi_id = "svnetwork12-3@okhdfcbank";
+      const upi_id = "9500676660@upi";
       const name = "shanmugam s";
       const amount = document.getElementById("amount").value.trim();
       const note = document.getElementById("note").value.trim();
